fix contact us height on mobile

--- a/pages/contact_us/contactus.module.sass
+++ b/pages/contact_us/contactus.module.sass
@@ -6,7 +6,6 @@
     @extend %flex-center
     @media screen and ( max-width: 769px )
         min-height: auto
-        padding-top: 5vh
 
 .form
     padding: 0.9375em
@@ -24,8 +23,9 @@
         padding: 3em 5em
         gap: 3.125em
         height: 100%
-        @media screen and ( max-width: 500px )
+        @media screen and ( max-width: 550px )
             padding: 1em
+            gap: 1em
 
     &__title
         text-align: center
